- Made the header responsive. - Adjusted search bar sizing. - Made links darker to fix contrast issues.
git-svn-id: https://subversion.assembla.com/svn/mapler-me@769 7cbc8f23-9b70-4854-b091-be65f742de0c

--- a/trunk/website/inc/css/main.css
+++ b/trunk/website/inc/css/main.css
@@ -9,20 +9,25 @@ header {
 
 header .sticky-nav {
 	position: relative;
-	width: 100%;
 	height: 60px;
 	background: #FFFFFF;
 	z-index: 1001;
+	margin:0 auto;
 	
-	-webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
-	-moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
-	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	
+	-webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.55);
+	-moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.55);
+	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.55);
 }
 
 header .sticky-nav.stuck {
 	position: fixed;
 	top: 0;
 	left: 0;
+	right: 0;
 	z-index: 1001;
 }
 
@@ -70,7 +75,7 @@ nav#menu #menu-nav li:first-child {
 }
 
 nav#menu #menu-nav li a {
-	color: #AEAEAE;
+	color: #7E7E7E;
 	font-size: 16px;
 	font-weight: 300;
 	line-height: 60px;
@@ -104,7 +109,7 @@ nav#rightmenu #menu-rightnav li:first-child {
 }
 
 nav#rightmenu #menu-rightnav li a {
-	color: #AEAEAE;
+	color: #7E7E7E;
 	font-size: 16px;
 	font-weight: 300;
 	line-height: 60px;
